Quote Form: add 5-star trust line and master plumber license display

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Request a Plumbing Quote | A-1 Affordable Plumbing Services</title>
-  <meta name="description" content="Request a fast, free plumbing quote from A-1 Affordable Plumbing Services. Serving Collin County with 30+ years of experience. Call or text (469) 900-5194." />
+  <title>A-1 Affordable Plumbing Services | Request a Quote</title>
+  <meta name="description" content="Licensed Master Plumber serving Collin County, TX. Request a plumbing quote for leak repair, water heater installation, drain cleaning and more. Call (469) 900-5194." />
   <link rel="stylesheet" href="style.css" />
 
   <!-- Google Tag Manager -->
@@ -15,7 +15,6 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-K82LHLQQ');
   </script>
-  <!-- End Google Tag Manager -->
 </head>
 
 <body>
@@ -23,9 +22,8 @@
   <!-- Google Tag Manager (noscript) -->
   <noscript>
     <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K82LHLQQ"
-            height="0" width="0" style="display:none;visibility:hidden"></iframe>
+      height="0" width="0" style="display:none;visibility:hidden"></iframe>
   </noscript>
-  <!-- End Google Tag Manager (noscript) -->
 
   <div class="container">
 
@@ -34,10 +32,17 @@
     <h2 class="subheading">A-1 Affordable Plumbing Services</h2>
     <h1>Request a Plumbing Quote</h1>
 
+    <!-- ⭐ Trust Line -->
+    <p class="review-line">★★★★★ Rated 5 Stars by Local Customers</p>
+
+    <!-- 🪪 License -->
+    <p class="license-line">Texas Master Plumber License M-43801</p>
+
     <p class="tagline">
       Licensed & Insured. Proudly Serving Collin County with 30+ Years of Experience.
     </p>
 
+    <!-- 📞 Click to Call -->
     <p class="call-now">
       📞 Call or Text Now:
       <a href="tel:+14699005194">(469) 900-5194</a>
@@ -45,7 +50,6 @@
 
     <form id="quoteForm">
 
-      <!-- CONTACT INFO -->
       <fieldset>
         <legend>Contact Information</legend>
 
@@ -62,7 +66,6 @@
         <input type="text" id="address" name="address" required />
       </fieldset>
 
-      <!-- JOB DETAILS -->
       <fieldset>
         <legend>Job Details</legend>
 
@@ -89,20 +92,25 @@
         We typically respond within 15–30 minutes during business hours.
       </p>
 
+      <div class="trust-badges">
+        ✓ Free Estimates &nbsp;&nbsp;|&nbsp;&nbsp;
+        ✓ Fast Scheduling &nbsp;&nbsp;|&nbsp;&nbsp;
+        ✓ Upfront Pricing
+      </div>
+
       <p id="responseMessage" class="hidden"></p>
 
     </form>
 
-    <div class="trust-badges">
-      ✔ Free Estimates &nbsp; | &nbsp;
-      ✔ Fast Scheduling &nbsp; | &nbsp;
-      ✔ Upfront Pricing
-    </div>
-
   </div>
 
-  <!-- Script -->
+  <!-- 📱 Sticky Mobile Call Bar -->
+  <div class="sticky-call">
+    <a href="tel:+14699005194">📞 Call Now (469) 900-5194</a>
+  </div>
+
   <script src="submit-v2.js"></script>
 
 </body>
 </html>
+
