Quote Form: restructure hero section with professional trust bar layout

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>A-1 Affordable Plumbing Services | Request a Quote</title>
-  <meta name="description" content="Licensed Master Plumber serving Collin County, TX. Request a plumbing quote for leak repair, water heater installation, drain cleaning and more. Call (469) 900-5194." />
+
+  <meta name="description"
+    content="Licensed Master Plumber serving Collin County, TX. Request a plumbing quote for leak repair, water heater installation, drain cleaning and more. Call (469) 900-5194." />
+
   <link rel="stylesheet" href="style.css" />
 
   <!-- Google Tag Manager -->
@@ -27,26 +30,29 @@
 
   <div class="container">
 
-    <img src="logo.png" alt="A-1 Affordable Plumbing Services Logo" class="logo" />
+    <!-- ================= HERO SECTION ================= -->
 
-    <h2 class="subheading">A-1 Affordable Plumbing Services</h2>
-    <h1>Request a Plumbing Quote</h1>
+    <div class="hero">
 
-    <!-- ⭐ Trust Line -->
-    <p class="review-line">★★★★★ Rated 5 Stars by Local Customers</p>
+      <img src="logo.png" alt="A-1 Affordable Plumbing Services Logo" class="logo" />
 
-    <!-- 🪪 License -->
-    <p class="license-line">Texas Master Plumber License M-43801</p>
+      <h2 class="company-name">A-1 Affordable Plumbing Services</h2>
+      <h1 class="main-heading">Request a Plumbing Quote</h1>
 
-    <p class="tagline">
-      Licensed & Insured. Proudly Serving Collin County with 30+ Years of Experience.
-    </p>
+      <div class="trust-bar">
+        <div class="stars">★★★★★ <span>Rated 5 Stars by Local Customers</span></div>
+        <div class="license">Texas Master Plumber • License M-43801</div>
+        <div class="experience">Licensed & Insured • 30+ Years Experience</div>
+      </div>
 
-    <!-- 📞 Click to Call -->
-    <p class="call-now">
-      📞 Call or Text Now:
-      <a href="tel:+14699005194">(469) 900-5194</a>
-    </p>
+      <div class="call-box">
+        <span class="call-label">📞 Call or Text Now</span>
+        <a href="tel:+14699005194" class="call-number">(469) 900-5194</a>
+      </div>
+
+    </div>
+
+    <!-- ================= QUOTE FORM ================= -->
 
     <form id="quoteForm">
 
@@ -104,7 +110,8 @@
 
   </div>
 
-  <!-- 📱 Sticky Mobile Call Bar -->
+  <!-- ================= STICKY MOBILE CALL BAR ================= -->
+
   <div class="sticky-call">
     <a href="tel:+14699005194">📞 Call Now (469) 900-5194</a>
   </div>
@@ -113,4 +120,3 @@
 
 </body>
 </html>
-
