Quote Form: add city strip for local SEO targeting

--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@
         ✓ Upfront Pricing
       </div>
 
+      <div class="city-strip">
+  Serving: Allen • Lucas • Plano • McKinney • Frisco • Wylie • Carrollton
+</div>
+
       <p id="responseMessage" class="hidden"></p>
 
     </form>
